# CENTRALDISPATCH

./: .env.example  .gitignore  Makefile  README.md  cd_defaults.yaml  cd_field_mapping.yaml  cd_field_mapping_v2.yaml  main.py  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup_project.py  warehouses.yaml
.github/workflows/: m3-staging-gate.yml
api/: auction_profiles.py  audit_log.py  auth.py  batch_jobs.py  batch_queue.py  cd_client.py  database.py  listing_fields.py  main.py  models.py  training_db.py  warehouse_constants.py
api/migrations/: add_extraction_metrics.py  add_layout_blocks.py
api/routes/: __init__.py  auction_types.py  auth_routes.py  documents.py  exports.py  extractions.py  field_mappings.py  health.py  integrations.py  metrics.py  models.py  reviews.py  runs.py  settings.py  test.py  training.py  warehouses.py
api/routes/integrations/: __init__.py  cd.py  clickup.py  csv_export.py  email.py  oauth.py  sheets.py  utils.py  webhook.py
api/workers/: __init__.py  email_worker.py
core/: __init__.py  config.py  logging_config.py  secrets.py
diagnostics/samples/: 12-30-2025_5515588_Vehicle_Sale_Documents_diagnostic.json  12-31-2025_5515588_Vehicle_Sale_Documents1_diagnostic.json  ShowReport (4)_diagnostic.json  ShowReport1_diagnostic.json  diagnostic_summary.json  invoice (1)_diagnostic.json  invoice21_diagnostic.json
docs/: ALGORITHM_SPECIFICATION.md  DEVELOPER_GUIDE.md  FRONTEND_BLOCKS.md  TZ_EXTRACTION_PIPELINE_V1.md  TZ_EXTRACTION_PIPELINE_V2.md  sheets_schema_v1.md  sheets_schema_v2.md  source_of_truth_spec_v2.md
docs/archived/: DEPLOYMENT_REPORT.md  QA_FREEZE_CLOSURE_REPORT.md
e2e/: package.json  playwright.config.ts
e2e/tests/: smoke.spec.ts
extractors/: __init__.py  address_parser.py  base.py  block_extractor.py  copart.py  field_resolver.py  gate_pass.py  iaa.py  location_classifier.py  manheim.py  ocr_strategy.py  spatial_parser.py
ingest/: __init__.py  email_reader.py
models/: training.py  vehicle.py
schemas/: sheets_columns_v1.yaml  sheets_schema_v1.py  sheets_schema_v2.py  sheets_schema_v3.py
scripts/: bootstrap.ps1  bootstrap.sh  clean_install.ps1  clean_install.sh  diagnose_extraction.py  load_test_m3.py  m3_staging_gate.py  run_milestone0_diagnostics.py  start_dev.ps1  start_dev.sh  test_extraction_direct.py
services/: __init__.py  cd_exporter.py  cd_sheet_exporter.py  cd_sheet_exporter_v2.py  central_dispatch.py  clickup.py  idempotency.py  orchestrator.py  sheets.py  sheets_exporter.py  sheets_exporter_v2.py  sheets_exporter_v3.py  sheets_source.py  training_service.py  warehouse.py
tests/: conftest.py  regression_runner.py  test_api_contracts.py  test_cd_v2_golden.py  test_config.py  test_extraction.py  test_extractors.py  test_gate_pass.py  test_golden_set.py  test_listing_fields.py  test_m3_staging_gate.py  test_training_system.py
tests/fixtures/: generate_test_pdfs.py
tests/golden_set/: README.md
tests/golden_set/expected/: 12-30-2025_5515588_Vehicle_Sale_Documents_expected.json  12-31-2025_5515588_Vehicle_Sale_Documents1_expected.json  ShowReport (4)_expected.json  ShowReport1_expected.json  invoice (1)_expected.json  invoice21_expected.json
tests/sample_docs/: README.md
ui/: app.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  api.js  index.css
web/src/components/: PDFViewer.jsx  PreflightBanner.jsx
web/src/components/settings/: AuditLogTab.jsx  CDTab.jsx  EmailTab.jsx  ExportTargetsTab.jsx  SettingsContext.jsx  WarehousesTab.jsx  index.js
web/src/context/: AuthContext.jsx
web/src/pages/: Dashboard.jsx  DocumentDetail.jsx  Documents.jsx  ListingReview.jsx  Login.jsx  Review.jsx  Runs.jsx  Settings.jsx  TestLab.jsx
